data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_533.wast
;; 4. **Test Different Block Type Preventing Exit**:    Implement a loop with a mismatched block type that could lead to infinite loop execution due to improper type handling preventing loop exit.

(assert_invalid
  (module
    (func $infinite-loop-type-mismatch
      (loop (result i32)
        (i32.const 1)
        (br 0)
      )
    )
  )
  "type mismatch"
)